[project]
name = "util"
version = "0.1.0"
description = "CLI tools for developing the Abyss Light theme"
authors = [
    {name = "Robb Shecter",email = "robb@public.law"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorzero (>=2.0,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
